--- a/public/index.html
+++ b/public/index.html
@@ -11,24 +11,8 @@
       sizes="180x180"
       href="%PUBLIC_URL%/favicon/apple-touch-icon.png"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
-    />
-    <link
-      rel="mask-icon"
-      href="%PUBLIC_URL%/favicon/safari-pinned-tab.svg"
-      color="#7c1d34"
-    />
-    <meta name="msapplication-TileColor" content="#7c1d34" />
+
+    <meta name="msapplication-TileColor" content="#fff" />
     <meta name="theme-color" content="#ffffff" />
     <title>학생 이력 관리사이트</title>
   </head>
