--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="format-detection" content="telephone=no" />
@@ -14,7 +15,7 @@
 
     <meta name="msapplication-TileColor" content="#fff" />
     <meta name="theme-color" content="#ffffff" />
-    <title>학생 이력 관리사이트</title>
+    <title>그린JobGo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
